--- a/index.html
+++ b/index.html
@@ -3,53 +3,203 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Little Piano</title>
+   <title>Key Symphony</title>
+   <link rel="icon" href="img.jpeg" type="image/x-icon">
    <link rel="stylesheet" href="style.css">
    <script src="script.js" defer ></script>
 </head>
 <body>
 
 
-   <h1 class="text">
-      Tiny Piano
-   </h1>
+   <h1 class="text ">
+      Key Symphony -  Where every note tells a story. <h1>
 
    
-   
+
    <div class="piano">
-      <div data-note = "C" class="key white"></div>
-      <div data-note = "Db" class="key white"></div> 
-      <div data-note = "D" class="key black"></div> 
-      <div data-note = "E" class="key black"></div> 
-      <div data-note = "Eb" class="key white"></div> 
-      <div data-note = "F" class="key white"></div> 
-      <div data-note = "Gb" class="key black"></div> 
-      <div data-note = "G" class="key white"></div> 
-      <div data-note = "Ab" class="key black"></div> 
-      <div data-note = "A" class="key white"></div> 
-      <div data-note = "Bb" class="key black"></div> 
-      <div data-note = "B" class="key white"></div> 
+      <!-- White Keys -->
+      <div data-note="A0" class="key white"></div>
+      <audio id="A0" src="notes/A0.mp3"></audio>
+      <div data-note="Bb0" class="key black"></div>
+      <audio id="Bb0" src="notes/Bb0.mp3"></audio>
+      <div data-note="B0" class="key white"></div>
+      <audio id="B0" src="notes/B0.mp3"></audio>
+      <div data-note="C1" class="key white"></div>
+      <audio id="C1" src="notes/C1.mp3"></audio>
+      <div data-note="Db1" class="key black"></div>
+      <audio id="Db1" src="notes/Db1.mp3"></audio>
+      <div data-note="D1" class="key white"></div>
+      <audio id="D1" src="notes/D1.mp3"></audio>
+      <div data-note="Eb1" class="key black"></div>
+      <audio id="Eb1" src="notes/Eb1.mp3"></audio>
+      <div data-note="E1" class="key white"></div>
+      <audio id="E1" src="notes/E1.mp3"></audio>
+      <div data-note="F1" class="key white"></div>
+      <audio id="F1" src="notes/F1.mp3"></audio>
+      <div data-note="Gb1" class="key black"></div>
+      <audio id="Gb1" src="notes/Gb1.mp3"></audio>
+      <div data-note="G1" class="key white"></div>
+      <audio id="G1" src="notes/G1.mp3"></audio>
+      <div data-note="Ab1" class="key black"></div>
+      <audio id="Ab1" src="notes/Ab1.mp3"></audio>
+      <div data-note="A1" class="key white"></div>
+      <audio id="A1" src="notes/A1.mp3"></audio>
+      <div data-note="Bb1" class="key black"></div>
+      <audio id="Bb1" src="notes/Bb1.mp3"></audio>
+      <div data-note="B1" class="key white"></div>
+      <audio id="B1" src="notes/B1.mp3"></audio>
+      <div data-note="C2" class="key white"></div>
+      <audio id="C2" src="notes/C2.mp3"></audio>
+      <div data-note="Db2" class="key black"></div>
+      <audio id="Db2" src="notes/Db2.mp3"></audio>
+      <div data-note="D2" class="key white"></div>
+      <audio id="D2" src="notes/D2.mp3"></audio>
+      <div data-note="Eb2" class="key black"></div>
+      <audio id="Eb2" src="notes/Eb2.mp3"></audio>
+      <div data-note="E2" class="key white"></div>
+      <audio id="E2" src="notes/E2.mp3"></audio>
+      <div data-note="F2" class="key white"></div>
+      <audio id="F2" src="notes/F2.mp3"></audio>
+      <div data-note="Gb2" class="key black"></div>
+      <audio id="Gb2" src="notes/Gb2.mp3"></audio>
+      <div data-note="G2" class="key white"></div>
+      <audio id="G2" src="notes/G2.mp3"></audio>
+      <div data-note="Ab2" class="key black"></div>
+      <audio id="Ab2" src="notes/Ab2.mp3"></audio>
+      <div data-note="A2" class="key white"></div>
+      <audio id="A2" src="notes/A2.mp3"></audio>
+      <div data-note="Bb2" class="key black"></div>
+      <audio id="Bb2" src="notes/Bb2.mp3"></audio>
+      <div data-note="B2" class="key white"></div>
+      <audio id="B2" src="notes/B2.mp3"></audio>
+      <div data-note="C3" class="key white"></div>
+      <audio id="C3" src="notes/C3.mp3"></audio>
+      <div data-note="Db3" class="key black"></div>
+      <audio id="Db3" src="notes/Db3.mp3"></audio>
+      <div data-note="D3" class="key white"></div>
+      <audio id="D3" src="notes/D3.mp3"></audio>
+      <div data-note="Eb3" class="key black"></div>
+      <audio id="Eb3" src="notes/Eb3.mp3"></audio>
+      <div data-note="E3" class="key white"></div>
+      <audio id="E3" src="notes/E3.mp3"></audio>
+      <div data-note="F3" class="key white"></div>
+      <audio id="F3" src="notes/F3.mp3"></audio>
+      <div data-note="Gb3" class="key black"></div>
+      <audio id="Gb3" src="notes/Gb3.mp3"></audio>
+      <div data-note="G3" class="key white"></div>
+      <audio id="G3" src="notes/G3.mp3"></audio>
+      <div data-note="Ab3" class="key black"></div>
+      <audio id="Ab3" src="notes/Ab3.mp3"></audio>
+      <div data-note="A3" class="key white"></div>
+      <audio id="A3" src="notes/A3.mp3"></audio>
+      <div data-note="Bb3" class="key black"></div>
+      <audio id="Bb3" src="notes/Bb3.mp3"></audio>
+      <div data-note="B3" class="key white"></div>
+      <audio id="B3" src="notes/B3.mp3"></audio>
+      <div data-note="C4" class="key white"></div>
+      <audio id="C4" src="notes/C4.mp3"></audio>
+      <div data-note="Db4" class="key black"></div>
+      <audio id="Db4" src="notes/Db4.mp3"></audio>
+      <div data-note="D4" class="key white"></div>
+      <audio id="D4" src="notes/D4.mp3"></audio>
+      <div data-note="Eb4" class="key black"></div>
+      <audio id="Eb4" src="notes/Eb4.mp3"></audio>
+      <div data-note="E4" class="key white"></div>
+      <audio id="E4" src="notes/E4.mp3"></audio>
+      <div data-note="F4" class="key white"></div>
+      <audio id="F4" src="notes/F4.mp3"></audio>
+      <div data-note="Gb4" class="key black"></div>
+      <audio id="Gb4" src="notes/Gb4.mp3"></audio>
+      <div data-note="G4" class="key white"></div>
+      <audio id="G4" src="notes/G4.mp3"></audio>
+      <div data-note="Ab4" class="key black"></div>
+      <audio id="Ab4" src="notes/Ab4.mp3"></audio>
+      <div data-note="A4" class="key white"></div>
+      <audio id="A4" src="notes/A4.mp3"></audio>
+      <div data-note="Bb4" class="key black"></div>
+      <audio id="Bb4" src="notes/Bb4.mp3"></audio>
+      <div data-note="B4" class="key white"></div>
+      <audio id="B4" src="notes/B4.mp3"></audio>
+      <div data-note="C5" class="key white"></div>
+      <audio id="C5" src="notes/C5.mp3"></audio>
+      <div data-note="Db5" class="key black"></div>
+      <audio id="Db5" src="notes/Db5.mp3"></audio>
+      <div data-note="D5" class="key white"></div>
+      <audio id="D5" src="notes/D5.mp3"></audio>
+      <div data-note="Eb5" class="key black"></div>
+      <audio id="Eb5" src="notes/Eb5.mp3"></audio>
+      <div data-note="E5" class="key white"></div>
+      <audio id="E5" src="notes/E5.mp3"></audio>
+      <div data-note="F5" class="key white"></div>
+      <audio id="F5" src="notes/F5.mp3"></audio>
+      <div data-note="Gb5" class="key black"></div>
+      <audio id="Gb5" src="notes/Gb5.mp3"></audio>
+      <div data-note="G5" class="key white"></div>
+      <audio id="G5" src="notes/G5.mp3"></audio>
+      <div data-note="Ab5" class="key black"></div>
+      <audio id="Ab5" src="notes/Ab5.mp3"></audio>
+      <div data-note="A5" class="key white"></div>
+      <audio id="A5" src="notes/A5.mp3"></audio>
+      <div data-note="Bb5" class="key black"></div>
+      <audio id="Bb5" src="notes/Bb5.mp3"></audio>
+      <div data-note="B5" class="key white"></div>
+      <audio id="B5" src="notes/B5.mp3"></audio>
+      <div data-note="C6" class="key white"></div>
+      <audio id="C6" src="notes/C6.mp3"></audio>
+      <div data-note="Db6" class="key black"></div>
+      <audio id="Db6" src="notes/Db6.mp3"></audio>
+      <div data-note="D6" class="key white"></div>
+      <audio id="D6" src="notes/D6.mp3"></audio>
+      <div data-note="Eb6" class="key black"></div>
+      <audio id="Eb6" src="notes/Eb6.mp3"></audio>
+      <div data-note="E6" class="key white"></div>
+      <audio id="E6" src="notes/E6.mp3"></audio>
+      <div data-note="F6" class="key white"></div>
+      <audio id="F6" src="notes/F6.mp3"></audio>
+      <div data-note="Gb6" class="key black"></div>
+      <audio id="Gb6" src="notes/Gb6.mp3"></audio>
+      <div data-note="G6" class="key white"></div>
+      <audio id="G6" src="notes/G6.mp3"></audio>
+      <div data-note="Ab6" class="key black"></div>
+      <audio id="Ab6" src="notes/Ab6.mp3"></audio>
+      <div data-note="A6" class="key white"></div>
+      <audio id="A6" src="notes/A6.mp3"></audio>
+      <div data-note="Bb6" class="key black"></div>
+      <audio id="Bb6" src="notes/Bb6.mp3"></audio>
+      <div data-note="B6" class="key white"></div>
+      <audio id="B6" src="notes/B6.mp3"></audio>
+      <div data-note="C7" class="key white"></div>
+      <audio id="C7" src="notes/C7.mp3"></audio>
+      <div data-note="Db7" class="key black"></div>
+      <audio id="Db7" src="notes/Db7.mp3"></audio>
+      <div data-note="D7" class="key white"></div>
+      <audio id="D7" src="notes/D7.mp3"></audio>
+      <div data-note="Eb7" class="key black"></div>
+      <audio id="Eb7" src="notes/Eb7.mp3"></audio>
+      <div data-note="E7" class="key white"></div>
+      <audio id="E7" src="notes/E7.mp3"></audio>
+      <div data-note="F7" class="key white"></div>
+      <audio id="F7" src="notes/F7.mp3"></audio>
+      <div data-note="Gb7" class="key black"></div>
+      <audio id="Gb7" src="notes/Gb7.mp3"></audio>
+      <div data-note="G7" class="key white"></div>
+      <audio id="G7" src="notes/G7.mp3"></audio>
+      <div data-note="Ab7" class="key black"></div>
+      <audio id="Ab7" src="notes/Ab7.mp3"></audio>
+      <div data-note="A7" class="key white"></div>
+      <audio id="A7" src="notes/A7.mp3"></audio>
+      <div data-note="Bb7" class="key black"></div>
+      <audio id="Bb7" src="notes/Bb7.mp3"></audio>
+      <div data-note="B7" class="key white"></div>
+      <audio id="B7" src="notes/B7.mp3"></audio>
+      <div data-note="C8" class="key white"></div>
+      <audio id="C8" src="notes/C8.mp3"></audio>
    </div>
-
-
-
-   <audio id = "C" src = "notes/c.mp3"></audio>
-   <audio id = "Db" src = "notes/Db.mp3"></audio>
-   <audio id = "D" src = "notes/D.mp3"></audio>
-   <audio id = "E" src = "notes/E.mp3"></audio>
-   <audio id = "Eb" src = "notes/Eb.mp3"></audio>
-   <audio id = "F" src = "notes/F.mp3"></audio>
-   <audio id = "Gb" src = "notes/Gb.mp3"></audio>
-   <audio id = "G" src = "notes/G.mp3"></audio>
-   <audio id = "Ab" src = "notes/Ab.mp3"></audio>
-   <audio id = "A" src = "notes/A.mp3"></audio>
-   <audio id = "Bb" src = "notes/Bb.mp3"></audio>
-   <audio id = "B" src = "notes/B.mp3"></audio>
-
-
+   
     <!-- Footer Section -->
     <footer class="footer">
-      <p>- - Developed by <a href="https://www.linkedin.com/in/adarsh-pathania177/" target="_blank">Adarsh </a> - -</p>
+      <p>- - Developed by <a href="https://www.linkedin.com/in/adarsh-pathania177/" target="_blank">Adarsh </a> |
+       Source- <a href="https://github.com/Stack-Sage/piano" target="_blank">Github </a> - - </p>
    </footer>
 
    
