--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 
    <h1 class="text ">
       Key Symphony -  Where every note tells a story. <h1>
-
-   
+         <div class="hue-changer">
+            <label for="hueRange">Theme: </label>
+            <input type="range" id="hueRange" min="0" max="360" value="0">
+        </div>
 
    <div class="piano">
       <!-- White Keys -->
